--- a/helene/pom.xml
+++ b/helene/pom.xml
@@ -31,10 +31,10 @@
 			<version>0.0.1</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-engine</artifactId>
+		    <version>5.1.0</version>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 
